<resources>
    <string name="app_name">TourGuide</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hello_this_is_it">hello</string>
    <string name="historical_site">Historical</string>
    <string name="restaurant">Restaurants</string>
    <string name="temples">Temples</string>
    <string name="park">Park</string>
    <string name="vivekanada_house_historical">Vivekananda House</string>
    <string name="semmozhi_poonga_historical">Semmozhi Poonga</string>
    <string name="government_chennai_historical">Government Museum Chennai</string>
    <string name="fort_st_george_historical">Fort St George</string>
    <string name="bharahiar_illam_historical">Bharathiar Illam</string>
    <string name="kapaleeswarar_historical">Arulmigu Kapaleeswarar Temple</string>
    <string name="address_semmozhi_poonga">Teynampet, Chennai</string>
    <string name="address_vivek_ananda">Triplicane</string>
    <string name="address_government_museum">Vinayaka Nagar Colony, Mylapore</string>
    <string name="address_fort_st">Golden Colony, Ambattur Industrial Estate</string>
    <string name="time_vivek_ananda">10AM–12:30PM, 3–7:30PM</string>
    <string name="time_gmc">10AM–7:30PM</string>
    <string name="time_ambattur">10AM–7:30PM</string>
    <string name="time_bharat">10AM–7:30PM</string>
    <string name="time_ambattur_arch">10AM–7:30PM</string>
    <string name="time_kapaleeswarar">10AM–7:30PM</string>
    <string name="name_of_the_place">Place:</string>
    <string name="time_from_and_to">Time:From And To</string>
    <string name="location_or_address">Location:</string>
    <string name="splash_screen_Text">Welcome to Chennai</string>
    <string name="time_material_icon">This is time material icon</string>
    <string name="time">Time:</string>
    <string name="place_id">place id</string>
    <string name="explore">Explore!</string>
    <string name="place_simple">PLACE:</string>
    <string name="kandhakottam_name">Kandhakottam Temple</string>
    <string name="time_kandhakottam">6-12am, 4-8:30pm.</string>
    <string name="address_kandhakottam">Kandhakottam Temple Nyniappa Street, Rattan Bazaar</string>
    <string name="name_chennai_kesan">Sri Chenna kesava Perumal</string>
    <string name="time_chennai_kesan">6-12 AM, 4-8pm</string>
    <string name="address_chennai_kesav">Devaraja Street, George Town</string>
    <string name="name_tirupati">Tirupati</string>
    <string name="guindy_national_park_name">Guindy Nation park</string>
    <string name="guindy_time">9am-5pm</string>
    <string name="guindy_location">Rangeguindy, Chennai</string>
    <string name="jeeva_park_name">Jeeva Park</string>
    <string name="natesan_park_name">Natesan Park</string>
    <string name="natesan_park_time">9am-5pm</string>
    <string name="natesan_park_address">Parthasarathy Puram, T Nagar,</string>
    <string name="jeeva_park_time">9am-5pm</string>
    <string name="jeeva_address">Parthasarathi Puram, T Nagar,</string>
    <string name="pangal_park_address">Parthasarathy Puram, T.Nagar</string>
    <string name="pangal_time">9am-5pm</string>
    <string name="pagal_park_name">Pangal Park</string>
    <string name="Thirupati_time">24 hours</string>
    <string name="tirupati_images">Tirumala, Tirupati, Andhra Pradesh</string>
    <string name="ramada_name">Ramada</string>
    <string name="radisson_name">Radisson Blu</string>
    <string name="leela_palace_name">Leela Palace</string>
    <string name="time_ramada">24 hrs</string>
    <string name="time_raddisson">24hrs</string>
    <string name="leela_palace_time">24hrs</string>
</resources>
