<ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="wrap_content"
    android:id="@+id/constraint"
    android:layout_width="match_parent"

    xmlns:android="http://schemas.android.com/apk/res/android">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/text_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="350dp"
            android:layout_marginTop="16dp"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/fort_st_george" />

        <ImageView
            android:id="@+id/imageViewFooter"
            android:layout_width="match_parent"
            android:layout_height="234dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/barrier3"
            app:srcCompat="@drawable/gradient_black" />

        <TextView
            android:id="@+id/placeName"
            style="@style/StyleTextViewsForPlaces"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/place_id"
            app:layout_constraintStart_toEndOf="@+id/textView3"
            app:layout_constraintTop_toTopOf="@+id/imageViewFooter" />

        <TextView
            android:id="@+id/location_in_place"
            style="@style/StyleTextViewsForPlaces"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/location_or_address"
            app:layout_constraintStart_toEndOf="@+id/barrier2"
            app:layout_constraintTop_toBottomOf="@+id/placeName" />

        <TextView
            android:id="@+id/time_opening_closing"
            style="@style/StyleTextViewsForPlaces"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/time"
            app:layout_constraintStart_toEndOf="@+id/barrier2"
            app:layout_constraintTop_toBottomOf="@+id/location_in_place" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/time_material_icon"
            app:layout_constraintEnd_toEndOf="@+id/barrier2"
            app:layout_constraintTop_toBottomOf="@+id/imageView4"
            app:srcCompat="@drawable/baseline_access_time_white_24" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="@+id/barrier2"
            app:layout_constraintTop_toBottomOf="@+id/textView3"
            app:srcCompat="@drawable/outline_location_on_white_24" />

        <TextView
            android:id="@+id/textView3"
            style="@style/StyleTextViewsForPlaces"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/place_simple"
            android:textColor="#ffffff"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/imageViewFooter" />

        <android.support.constraint.Barrier
            android:id="@+id/barrier2"
            android:layout_width="1dp"
            android:layout_height="1dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            app:barrierDirection="right"
            app:constraint_referenced_ids="textView3"
            app:layout_constraintEnd_toEndOf="parent" />

        <android.support.constraint.Barrier
            android:id="@+id/barrier3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="bottom"
            app:constraint_referenced_ids="imageView"
            tools:layout_editor_absoluteY="449dp" />

        <TextView
            android:id="@+id/description"
            style="@style/styleTextViewForDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="28dp"
            android:text="Description: "
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/time_opening_closing" />

    </android.support.constraint.ConstraintLayout>



</ScrollView>